--- a/Program/KIOSK/KIOSK/KIOSK.csproj
+++ b/Program/KIOSK/KIOSK/KIOSK.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.4" />
   </ItemGroup>
 
