--- a/Program/KIOSK/TakeProgram/TakeProgram.csproj
+++ b/Program/KIOSK/TakeProgram/TakeProgram.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.27" />
+    <PackageReference Include="oracle.manageddataaccess.core" Version="3.21.41" />
   </ItemGroup>
 
 </Project>
